minikube/networking/sol24/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route
spec:
  parentRefs:
    - name: gateway
  hostnames:
    - api.example.com
    - ui.example.com
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /api
      backendRefs:
      - name: api
        port: 80
    - matches:
      - path:
          type: PathPrefix
          value: /ui
      backendRefs:
      - name: ui
        port: 80
